src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>MostRecentPosition__c</fullName>
        <description>"Most Current Position" changed to "Primary Position"</description>
        <label>Primary Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Community Coordinator</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Education Coordinator</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator (Center-based)</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator (Early Head Start/Head Start)</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Teacher/Educator (Home-based)</fullName>
                </value>
                <value>
                    <fullName>Early Intervention Provider</fullName>
                </value>
                <value>
                    <fullName>Home Visitor</fullName>
                </value>
                <value>
                    <fullName>Judge</fullName>
                </value>
                <value>
                    <fullName>Literacy Specialist</fullName>
                </value>
                <value>
                    <fullName>Mental Health Consultant</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
                <value>
                    <fullName>Parent Educator</fullName>
                </value>
                <value>
                    <fullName>Pediatrician</fullName>
                </value>
                <value>
                    <fullName>Policymaker</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Program Administrator</fullName>
                </value>
                <value>
                    <fullName>Psychiatrist</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Researcher</fullName>
                </value>
                <value>
                    <fullName>Social Worker</fullName>
                </value>
                <value>
                    <fullName>Therapist</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NTIId__c</fullName>
        <description>Identifies if the field is useful (mostly NTI data only).</description>
        <label>NTI Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Policy_Network_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy Network Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nimble_ID__c</fullName>
        <externalId>true</externalId>
        <label>Nimble ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Items_Purchased__c</fullName>
        <label>Number of Items Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofChildren__c</fullName>
        <label>Number of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PDInterest__c</fullName>
        <label>PD Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PD_Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParticipantDisciplines__c</fullName>
        <label>Participant: Disciplines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Participant_Disciplines</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Network_Formulae__c</fullName>
        <formula>IF(AND( Is_Policy_Network__c , ITCP__c ),1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Network Formulae</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchased_LC_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will be checked is this Contact has ever purchased a Learning Center training via the LMS.</inlineHelpText>
        <label>Purchased LC Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receives_NextSteps__c</fullName>
        <label>Receives NextSteps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_By_c__c</fullName>
        <description>Referred by field on the Community Hub Join/Renew process. Used to gather information on which Fellow/Individual referred the customer.</description>
        <inlineHelpText>Referred by field on the Community Hub Join/Renew process. Used to gather information on which Fellow/Individual referred the customer.</inlineHelpText>
        <label>Referred By (How did you hear about us?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Colleague, Friend or Supervisor (please share their name in the write in box below if you choose)</fullName>
                </value>
                <value>
                    <fullName>Email from ZERO TO THREE</fullName>
                </value>
                <value>
                    <fullName>From another Organization (please use the write in box below to share its name if you choose)</fullName>
                </value>
                <value>
                    <fullName>Google/Internet Search</fullName>
                </value>
                <value>
                    <fullName>I am/was a ZERO TO THREE Journal Subscriber</fullName>
                </value>
                <value>
                    <fullName>I am a current or Academy Fellow</fullName>
                </value>
                <value>
                    <fullName>I attended a training led by ZERO TO THREE/Healthy Steps</fullName>
                </value>
                <value>
                    <fullName>I’ve been a long-time fan of ZERO TO THREE</fullName>
                </value>
                <value>
                    <fullName>Other (please write in below)</fullName>
                </value>
                <value>
                    <fullName>ZERO TO THREE Annual Conference</fullName>
                </value>
                <value>
                    <fullName>ZERO TO THREE’s website - www.ZEROTOTHREE.org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_for_AC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will be checked when a Contact has ever registered for an Annual Conference. Maintained via automation</inlineHelpText>
        <label>Registered for AC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalsaId__c</fullName>
        <description>Unique Identifier from Salsa.</description>
        <externalId>true</externalId>
        <label>Salsa Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Position__c</fullName>
        <label>Secondary Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive Director</fullName>
                </value>
                <value>
                    <fullName>Program Director</fullName>
                </value>
                <value>
                    <fullName>Manager/Supervisor</fullName>
                </value>
                <value>
                    <fullName>Direct Service Provider</fullName>
                </value>
                <value>
                    <fullName>Other (Write in Below)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceCode__c</fullName>
        <description>Used to identify how a constituent was acquired.</description>
        <label>Source Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Formulae__c</fullName>
        <formula>IF(AND( FON_Is_Staff__c , ITCP__c ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Formulae</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentGraduationDate__c</fullName>
        <description>The contact has self reported their graduation date.</description>
        <label>Student Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StudentGraduationMonthYear__c</fullName>
        <label>Student Graduation Date (MO/YEAR)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubSourceCode__c</fullName>
        <description>Used to identify the journal subscription.</description>
        <label>Sub Source Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the record is a test record</description>
        <inlineHelpText>Check this checkbox if the record is a test record</inlineHelpText>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Growing_Brian_certified_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Growing Brian certified trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Growing_Brian_provisional_trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Growing Brian provisional trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Think_Babies_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marks when a Think Babies Contact has used the tool. Used in segmentations for Pardot</description>
        <label>Think Babies Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Think_Babies__c</fullName>
        <label>Think Babies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YourOrganization__c</fullName>
        <description>Name of Your Organization, If Application</description>
        <label>Your Organization Name (If Applicable)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZTT_ID__c</fullName>
        <description>The unique identifier for all ZTT accounts.</description>
        <inlineHelpText>The unique identifier for all ZTT accounts.</inlineHelpText>
        <label>ZTT ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ZTT_Member_Formulae__c</fullName>
        <formula>IF(AND( ITCP__c , Is_Member__c ), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZTT Member Formulae</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c4g_Contact_CaseSafe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c4g_HS_Role_Other__c</fullName>
        <inlineHelpText>Text field for "Other" HS Role description</inlineHelpText>
        <label>HS Role Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cfgHSPortalUserActive__c</fullName>
        <formula>cfg_Community_User__r.IsActive</formula>
        <inlineHelpText>Automatically checked if the related Community user is Active, unchecked if no user or deactivated user.</inlineHelpText>
        <label>HS Portal User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Company_Name__c</fullName>
        <label>Company Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_CreatedbyFormAssembly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a HealthySteps Contact is created or updated via a HealthySteps FormAssembly form.</description>
        <inlineHelpText>Checked if a HealthySteps Contact is created or updated via a HealthySteps FormAssembly form.</inlineHelpText>
        <label>Created by FormAssembly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Deceased_Date__c</fullName>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cfg_Donor_Status__c</fullName>
        <label>Donor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Donor</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Lapsed Donor</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Reengaged Donor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Flag_for_Password_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Contact changes to HS record type &amp; they have an active user, this flag will get set to flag as needing Password reset during nightly Activate Users batch.</description>
        <label>Flag for Password Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Gives_Anonymously__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gives Anonymously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Giving_Level__c</fullName>
        <label>Giving Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contributors ($1-99)</fullName>
                </value>
                <value>
                    <fullName>Supporters ($100-499)</fullName>
                </value>
                <value>
                    <fullName>Friends ($500-999)</fullName>
                </value>
                <value>
                    <fullName>Caregivers ($1,000-4,999)</fullName>
                </value>
                <value>
                    <fullName>Nurturers ($5,000-9,999)</fullName>
                </value>
                <value>
                    <fullName>Partners ($10,000-24,999)</fullName>
                </value>
                <value>
                    <fullName>Champions ($25,000-99,999)</fullName>
                </value>
                <value>
                    <fullName>Benefactors ($100,000 &amp; Up)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_HS_Specialist_Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HS Specialist Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Contacts (HS Specialist Site Profile)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Higher_Logic_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HS Connect Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Implementation_Plan_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Plan Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cfg_Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_InterestCurriculaPrograms__c</fullName>
        <label>Interest: Curricula Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cfg_Interest_Curricula_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_InterestPotentialFutureOfferings__c</fullName>
        <label>Interest: Potential Future Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cfg_Interest_Potential_Future_Offerings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Domains__c</fullName>
        <label>Interest - Domains</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Early Childhood Development</fullName>
                </value>
                <value>
                    <fullName>2. Family-Centered Practice</fullName>
                </value>
                <value>
                    <fullName>3. Relationship-Based Practices</fullName>
                </value>
                <value>
                    <fullName>4. Health and Development Risk and Protective Factors</fullName>
                </value>
                <value>
                    <fullName>5. Cultural and Linguistic Responsiveness</fullName>
                </value>
                <value>
                    <fullName>6. Leadership to Meet Family Needs and Improve Services and Systems</fullName>
                </value>
                <value>
                    <fullName>7. Professional and Ethical Practices</fullName>
                </value>
                <value>
                    <fullName>8. Service Planning, Coordination, and Collaboration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Formats_Online__c</fullName>
        <label>Interest - Formats Online</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Conference Library</fullName>
                </value>
                <value>
                    <fullName>Web Meeting Facilitation or Presentation (less than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Online Lessons and/or Courses</fullName>
                </value>
                <value>
                    <fullName>Online Learning Community/Community of Practice (CoP) Facilitation</fullName>
                </value>
                <value>
                    <fullName>Online Reflective Follow-Up Session (less than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Formats_Onsite__c</fullName>
        <label>Interest - Formats Onsite</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conference or Meeting Presentation(s) (less than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Conference or Meeting Sessions (more than 1.5 hours)</fullName>
                </value>
                <value>
                    <fullName>Keynote(s)</fullName>
                </value>
                <value>
                    <fullName>Half-Day training (3 hours)</fullName>
                </value>
                <value>
                    <fullName>Full-Day Training (6 hours)</fullName>
                </value>
                <value>
                    <fullName>Training Series (multiple days)</fullName>
                </value>
                <value>
                    <fullName>Reflective Follow-Up Session (3-6 hours)</fullName>
                </value>
                <value>
                    <fullName>Learning Community/Community of Practice (CoP) Facilitation</fullName>
                </value>
                <value>
                    <fullName>Training of Trainers</fullName>
                </value>
                <value>
                    <fullName>Trainer Certification</fullName>
                </value>
                <value>
                    <fullName>Training of Facilitators (e.g., to lead CoPs)</fullName>
                </value>
                <value>
                    <fullName>Faculty Institutes</fullName>
                </value>
                <value>
                    <fullName>Technical Assistance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Interest_Sessions__c</fullName>
        <label>Interest - Sessions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brain Development</fullName>
                </value>
                <value>
                    <fullName>Early Language and Literacy Development</fullName>
                </value>
                <value>
                    <fullName>Foundations of School Readiness</fullName>
                </value>
                <value>
                    <fullName>Importance of Play</fullName>
                </value>
                <value>
                    <fullName>Responding to Challenging Behaviors in Infants and Toddlers</fullName>
                </value>
                <value>
                    <fullName>Social and Emotional Development</fullName>
                </value>
                <value>
                    <fullName>Supporting Early Science, Technology, Engineering and Math (STEM) Skills with Infants, Toddlers and Their Families</fullName>
                </value>
                <value>
                    <fullName>Understanding Temperament</fullName>
                </value>
                <value>
                    <fullName>Building Collaborative Relationships with Families</fullName>
                </value>
                <value>
                    <fullName>Coaching and Engaging Families in Early Intervention Services</fullName>
                </value>
                <value>
                    <fullName>Factors that Affect Attachment</fullName>
                </value>
                <value>
                    <fullName>Relationship-Based and Reflective Coaching and Mentoring</fullName>
                </value>
                <value>
                    <fullName>Reflective Supervision</fullName>
                </value>
                <value>
                    <fullName>Relationship-Based and Reflective Organizations</fullName>
                </value>
                <value>
                    <fullName>Foundations of Infant and Early Childhood Mental Health</fullName>
                </value>
                <value>
                    <fullName>Infants and Young Children with Special Needs</fullName>
                </value>
                <value>
                    <fullName>Trauma and Toxic Stress</fullName>
                </value>
                <value>
                    <fullName>Trauma Informed Practice</fullName>
                </value>
                <value>
                    <fullName>Cultural Context for Parenting and Early Childhood</fullName>
                </value>
                <value>
                    <fullName>Supporting Dual-Language Learners</fullName>
                </value>
                <value>
                    <fullName>Coming Together Around Military Families - Duty to Care: Supporting Young Children through Challenging Times</fullName>
                </value>
                <value>
                    <fullName>Systems of Support for Early Childhood Educators</fullName>
                </value>
                <value>
                    <fullName>Infant and Early Childhood Mental Health Consultation and Coaching</fullName>
                </value>
                <value>
                    <fullName>Community of Practice Facilitation</fullName>
                </value>
                <value>
                    <fullName>Core Components of Safe Babies Court Teams, including Parent-Child Contact and Concurrent Planning</fullName>
                </value>
                <value>
                    <fullName>Enrolling Families and Maintaining Parent Engagement in Home-Visiting Programs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Lead_Account_Type__c</fullName>
        <label>Lead Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Legacy_Congressional_District__c</fullName>
        <label>Legacy Congressional District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Mail_Code__c</fullName>
        <label>Mail Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Mail</fullName>
                </value>
                <value>
                    <fullName>No Mail</fullName>
                </value>
                <value>
                    <fullName>No Address</fullName>
                </value>
                <value>
                    <fullName>No Soliciting</fullName>
                </value>
                <value>
                    <fullName>Next Year Appeal</fullName>
                </value>
                <value>
                    <fullName>Next Appeal</fullName>
                </value>
                <value>
                    <fullName>Undeliverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Physician_Champion_Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Champion Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Contacts (Physician Champion Site Profile)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Program_Manager_Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Salsa_Created_Date__c</fullName>
        <label>Salsa Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cfg_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cfg_Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfg_Spouse_Status__c</fullName>
        <label>Spouse Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Significant Other/Domestic Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cfg_Total_Advocacy_Actions__c</fullName>
        <label>Total Advocacy Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cfg_Works_for_HealthySteps__c</fullName>
        <label>Works for HealthySteps practice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Works for another organization or program</fullName>
                </value>
                <value>
                    <fullName>Funder or other HealthySteps stakeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_URL__c</fullName>
        <label>test URL</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>npe01__WorkPhone__c</columns>
        <columns>npe01__WorkEmail__c</columns>
        <columns>kwzd__KWD_Last_Processed_DT__c</columns>
        <columns>Date_of_Last_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
</CustomObject>